# chatbot

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app copy.py  streamlit_app.py
.github/workflows/: ci.yml
src/rag_chatbot/: __init__.py  cli.py
src/rag_chatbot/auth/: jwt_auth.py
src/rag_chatbot/core/: config.py  exceptions.py  logging_config.py  security.py
src/rag_chatbot/ingestion/: extractors.py
src/rag_chatbot/monitoring/: health.py  metrics.py
src/rag_chatbot/rag/: chunking.py  hybrid_search.py
src/rag_chatbot/services/: cache.py  chatbot.py  llm.py  search.py
src/rag_chatbot/tasks/: celery_app.py  ingestion.py
tests/: conftest.py
tests/unit/: test_cache.py  test_security.py
